last last last one

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,32 @@
-# Mac Specific
+# Windows image file caches
+Thumbs.db
+ehthumbs.db
+
+# Folder config file
+Desktop.ini
+
+# Recycle Bin used on file shares
+$RECYCLE.BIN/
+
+# Windows Installer files
+*.cab
+*.msi
+*.msm
+*.msp
+
+# Windows shortcuts
+*.lnk
+
+# =========================
+# Operating System Files
+# =========================
+
+# OSX
+# =========================
+
 .DS_Store
 .AppleDouble
 .LSOverride
-
-# Icon must end with two \r
-Icon
-
 
 # Thumbnails
 ._*
@@ -21,8 +42,8 @@ Network Trash Folder
 Temporary Items
 .apdisk
 
-# Jekyll Specific
-_site/
+#Jekyll
+_site
 
-# Ruby
-Gemfile.lock
+# webstorm
+.idea
